test second commit

--- a/Project/Acceptance Test/FitResult/addBookSucceeded.fit-2017-01-24-01h37m59s.html
+++ b/Project/Acceptance Test/FitResult/addBookSucceeded.fit-2017-01-24-01h37m59s.html
@@ -1,4 +1,26 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+<html><head><title>Suite addBookSucceeded.fit run at: Tue Jan 24 01:37:59 IST 2017</title>
+	<link rel="stylesheet" type="text/css" href="css/fitnesse.css" media="screen"/>
+ 	<link rel="stylesheet" type="text/css" href="css/fitnesse.css" media="print"/>
+<script language="JavaScript" type="text/javascript">
+var collapsableOpenCss = "collapsable"
+var collapsableClosedCss = "hidden"
+var collapsableOpenImg = "images/collapsableOpen.gif"
+var collapsableClosedImg = "images/collapsableClosed.gif"
+function toggleCollapsable(id){
+var div = document.getElementById(id);
+var img = document.getElementById("img" + id);
+if(div.className.indexOf(collapsableClosedCss) != -1) {
+div.className = collapsableOpenCss;
+img.src = collapsableOpenImg;
+} else {
+div.className = collapsableClosedCss;
+img.src = collapsableClosedImg;
+} }
+</script>
+
+</head>
+<body>
+<div> Suite is: C:/Users/kfir/git/iBook/Project/Acceptance Test/FitTests/addBookSucceeded.fit</div><div class="test_output_name">Name: addBookSucceeded.fit</div><div> Suite executed at: Tue Jan 24 01:37:59 IST 2017 Elapsed time: 766 millseconds  </div><table><tr><td></td><td><a href="#7e31761f:159cdb1827d:-8000">addBookSucceeded.fit</a></td><td class="pass">1 right, 0 wrong, 0 ignored, 0 exceptions</td></tr></table><div class="test_output_name"><a name="7e31761f:159cdb1827d:-8000"/><p>Test file: addBookSucceeded.fit</p></div><!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/TR/REC-html40" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word">
 <head>
@@ -223,28 +245,6 @@ div.Section1
 			<p class="MsoNormal"><span style="font-family: Arial;">52.0</span></p>
 			</td>
 		</tr>
-		<tr style="mso-yfti-irow: 7;">
-			<td style="padding: 3.75pt;">
-			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">enter</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
-			<td style="padding: 3.75pt;">
-			<p><span class="SpellE"><span style="font-family: Arial;"><font size="2">setKeywords</font></span></span></p>
-			</td>
-			<td style="padding: 3.75pt;">
-			<p class="MsoNormal"><span style="font-family: Arial;"><o:p>magic harry potter wizard</o:p></span></p>
-			</td>
-		</tr>
-		<tr style="mso-yfti-irow: 8;">
-			<td style="padding: 3.75pt;">
-			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">enter</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
-			<td style="padding: 3.75pt;">
-			<p><span class="SpellE"><span style="font-family: Arial;"><font size="2">setSummary</font></span></span></p>
-			</td>
-			<td style="padding: 3.75pt;">
-			<p class="MsoNormal"><span style="font-family: Arial;">a story of child that do magic</span></p>
-			</td>
-		</tr>
 		<tr style="mso-yfti-irow: 9;">
 			<td style="padding: 3.75pt;">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">check</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
@@ -252,7 +252,7 @@ div.Section1
 			<td style="padding: 3.75pt;">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">addBook</span></span></p>
 			</td>
-			<td style="padding: 3.75pt;">
+			<td style="padding: 3.75pt;" class="pass">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">true</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
 			</td>
 		</tr>
@@ -269,3 +269,5 @@ div.Section1
 </div>
 </body>
 </html>
+
+</body></html>
