--- a/Project/bin/addBookSucceeded.fit-2017-01-24-01h26m45s.html
+++ b/Project/bin/addBookSucceeded.fit-2017-01-24-01h26m45s.html
@@ -1,4 +1,26 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+<html><head><title>Suite addBookSucceeded.fit run at: Tue Jan 24 01:26:46 IST 2017</title>
+	<link rel="stylesheet" type="text/css" href="css/fitnesse.css" media="screen"/>
+ 	<link rel="stylesheet" type="text/css" href="css/fitnesse.css" media="print"/>
+<script language="JavaScript" type="text/javascript">
+var collapsableOpenCss = "collapsable"
+var collapsableClosedCss = "hidden"
+var collapsableOpenImg = "images/collapsableOpen.gif"
+var collapsableClosedImg = "images/collapsableClosed.gif"
+function toggleCollapsable(id){
+var div = document.getElementById(id);
+var img = document.getElementById("img" + id);
+if(div.className.indexOf(collapsableClosedCss) != -1) {
+div.className = collapsableOpenCss;
+img.src = collapsableOpenImg;
+} else {
+div.className = collapsableClosedCss;
+img.src = collapsableClosedImg;
+} }
+</script>
+
+</head>
+<body>
+<div> Suite is: C:/Users/kfir/git/iBook/Project/Acceptance Test/FitTests/addBookSucceeded.fit</div><div class="test_output_name">Name: addBookSucceeded.fit</div><div> Suite executed at: Tue Jan 24 01:26:46 IST 2017 Elapsed time: 346 millseconds  </div><table><tr><td></td><td><a href="#42cda2e2:159cda73b5a:-8000">addBookSucceeded.fit</a></td><td class="error">0 right, 0 wrong, 0 ignored, 9 exceptions</td></tr></table><div class="test_output_name"><a name="42cda2e2:159cda73b5a:-8000"/><p>Test file: addBookSucceeded.fit</p></div><!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 <html xmlns="http://www.w3.org/TR/REC-html40" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word">
 <head>
@@ -134,20 +156,20 @@ div.Section1
 			</td>
 		</tr>
 		<tr style="mso-yfti-irow: 1;">
-			<td style="padding: 3.75pt;">
+			<td style="padding: 3.75pt;" class="error">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">start</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
+			<hr/> <span class="fit_label">Could not find fixture: Fixtures.AddBook.</span></td>
 			<td style="padding: 3.75pt;">
-			<p class="MsoNormal"><font face="Arial"><span class="SpellE">Fixtures.iBook.AddBook</span></font></p>
+			<p class="MsoNormal"><font face="Arial"><span class="SpellE">Fixtures.AddBook</span></font></p>
 			</td>
 			<td style="padding: 3.75pt;">
 			<p class="MsoNormal"><span lang="EN-US" style="font-family: Arial; mso-ansi-language: EN-US;">&nbsp;<o:p></o:p></span></p>
 			</td>
 		</tr>
 		<tr style="mso-yfti-irow: 2;">
-			<td style="padding: 3.75pt;">
+			<td style="padding: 3.75pt;" class="error">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">press</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
+			<hr/> <span class="fit_label">You must start a fixture using the 'start' keyword.</span></td>
 			<td style="padding: 3.75pt;">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">startBook</span></span></p>
 			</td>
@@ -156,9 +178,9 @@ div.Section1
 			</td>
 		</tr>
 		<tr style="mso-yfti-irow: 3;">
-			<td style="padding: 3.75pt;">
+			<td style="padding: 3.75pt;" class="error">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">enter</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
+			<hr/> <span class="fit_label">You must start a fixture using the 'start' keyword.</span></td>
 			<td style="padding: 3.75pt;">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">setTitle</span></span></p>
 			</td>
@@ -167,9 +189,9 @@ div.Section1
 			</td>
 		</tr>
 		<tr style="mso-yfti-irow: 4;">
-			<td style="padding: 3.75pt;">
+			<td style="padding: 3.75pt;" class="error">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">enter</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
+			<hr/> <span class="fit_label">You must start a fixture using the 'start' keyword.</span></td>
 			<td style="padding: 3.75pt;">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">setAuthor</span></span></p>
 			</td>
@@ -178,9 +200,9 @@ div.Section1
 			</td>
 		</tr>
 		<tr style="mso-yfti-irow: 5;">
-			<td style="padding: 3.75pt;">
+			<td style="padding: 3.75pt;" class="error">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">enter</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
+			<hr/> <span class="fit_label">You must start a fixture using the 'start' keyword.</span></td>
 			<td style="padding: 3.75pt;">
 			<p><span class="SpellE"><span style="font-family: Arial;"><font size="2">setLanguage</font></span></span></p>
 
@@ -191,9 +213,9 @@ div.Section1
 			</td>
 		</tr>
 		<tr style="mso-yfti-irow: 6;">
-			<td style="padding: 3.75pt;">
+			<td style="padding: 3.75pt;" class="error">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">enter</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
+			<hr/> <span class="fit_label">You must start a fixture using the 'start' keyword.</span></td>
 			<td style="padding: 3.75pt;">
 			<p><span class="SpellE"><span style="font-family: Arial;"><font size="2">setContents</font></span></span></p>
 			</td>
@@ -202,9 +224,9 @@ div.Section1
 			</td>
 		</tr>
 		<tr style="mso-yfti-irow: 7;">
-			<td style="padding: 3.75pt;">
+			<td style="padding: 3.75pt;" class="error">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">enter</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
+			<hr/> <span class="fit_label">You must start a fixture using the 'start' keyword.</span></td>
 			<td style="padding: 3.75pt;">
 			<p><span class="SpellE"><span style="font-family: Arial;"><font size="2">setKeywords</font></span></span></p>
 			</td>
@@ -213,9 +235,9 @@ div.Section1
 			</td>
 		</tr>
 		<tr style="mso-yfti-irow: 8;">
-			<td style="padding: 3.75pt;">
+			<td style="padding: 3.75pt;" class="error">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">enter</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
+			<hr/> <span class="fit_label">You must start a fixture using the 'start' keyword.</span></td>
 			<td style="padding: 3.75pt;">
 			<p><span class="SpellE"><span style="font-family: Arial;"><font size="2">setPrice</font></span></span></p>
 			</td>
@@ -223,32 +245,10 @@ div.Section1
 			<p class="MsoNormal"><span style="font-family: Arial;">52.0</span></p>
 			</td>
 		</tr>
-		<tr style="mso-yfti-irow: 7;">
-			<td style="padding: 3.75pt;">
-			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">enter</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
-			<td style="padding: 3.75pt;">
-			<p><span class="SpellE"><span style="font-family: Arial;"><font size="2">setKeywords</font></span></span></p>
-			</td>
-			<td style="padding: 3.75pt;">
-			<p class="MsoNormal"><span style="font-family: Arial;"><o:p>magic harry potter wizard</o:p></span></p>
-			</td>
-		</tr>
-		<tr style="mso-yfti-irow: 8;">
-			<td style="padding: 3.75pt;">
-			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">enter</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
-			<td style="padding: 3.75pt;">
-			<p><span class="SpellE"><span style="font-family: Arial;"><font size="2">setSummary</font></span></span></p>
-			</td>
-			<td style="padding: 3.75pt;">
-			<p class="MsoNormal"><span style="font-family: Arial;">a story of child that do magic</span></p>
-			</td>
-		</tr>
 		<tr style="mso-yfti-irow: 9;">
-			<td style="padding: 3.75pt;">
+			<td style="padding: 3.75pt;" class="error">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">check</span></span><span style="font-family: Arial;"><o:p></o:p></span></p>
-			</td>
+			<hr/> <span class="fit_label">You must start a fixture using the 'start' keyword.</span></td>
 			<td style="padding: 3.75pt;">
 			<p class="MsoNormal"><span class="SpellE"><span style="font-family: Arial;">addBook</span></span></p>
 			</td>
@@ -269,3 +269,5 @@ div.Section1
 </div>
 </body>
 </html>
+
+</body></html>
